if (NOT ${CMAKE_BUILD_TYPE} MATCHES "Coverage")
	add_subdirectory(freegeoip)
	add_subdirectory(hello)
	add_subdirectory(hello-no-meta)
	add_subdirectory(clock)
	add_subdirectory(websocket)
	add_subdirectory(asyncawait)
	add_subdirectory(pastebin)
	add_subdirectory(smolsite)
	add_subdirectory(send-money-json-api)
	add_subdirectory(forthsalon)
endif()

add_subdirectory(techempower)
